--- a/app/src/main/res/layout/activity_main_viewer.xml
+++ b/app/src/main/res/layout/activity_main_viewer.xml
@@ -8,18 +8,34 @@
     android:orientation="vertical"
     tools:context="apshirokov.cs.hse.iqueue.MainViewer">
 
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorMyBlack"
-        android:fontFamily="@font/segoe_ui"
-        android:gravity="center_vertical"
-        android:text="My Notes"
-        android:textAlignment="center"
-        android:textColor="@color/colorMyWhite"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal">
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/titleLogo"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:background="@color/colorMyBlack"
+            android:fontFamily="@font/segoe_ui"
+            android:gravity="center_vertical"
+            android:text="My Notes"
+            android:textAlignment="center"
+            android:textColor="@color/colorMyWhite"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/fl_content"
