--- a/app/src/main/res/layout/fragment_choose_branch.xml
+++ b/app/src/main/res/layout/fragment_choose_branch.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
@@ -12,11 +13,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <com.mapbox.mapboxsdk.maps.MapView
+            android:id="@+id/mapChooseBranch"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            app:srcCompat="@drawable/map" />
+            mapbox:mapbox_cameraTargetLat="40.73581"
+            mapbox:mapbox_cameraTargetLng="-73.99155"
+            mapbox:mapbox_cameraZoom="11"
+            mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v11" />
 
         <LinearLayout
             android:layout_width="match_parent"
