--- a/app/src/main/res/layout/form_branch_list_element.xml
+++ b/app/src/main/res/layout/form_branch_list_element.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/formBranchListElement"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimaryDark"
