--- a/app/src/main/res/layout/fragment_branch.xml
+++ b/app/src/main/res/layout/fragment_branch.xml
@@ -1,162 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:orientation="vertical">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="162dp"
+                    android:scaleType="center"
+                    app:srcCompat="@drawable/map" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="157dp"
+                        android:layout_height="43dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginRight="50dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/point" />
+
+                    <TextView
+                        android:id="@+id/branchFragmentAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/segoe_ui"
+                        android:gravity="center_vertical"
+                        android:text="420 Something ST"
+                        android:textColor="@color/colorMyWhite"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="157dp"
+                        android:layout_height="43dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginRight="50dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/distance" />
+
+                    <TextView
+                        android:id="@+id/branchFragmentTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/segoe_ui"
+                        android:gravity="center_vertical"
+                        android:text="1.5 km"
+                        android:textColor="@color/colorMyWhite"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="157dp"
+                        android:layout_height="43dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginRight="50dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/stopwatch" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/segoe_ui"
+                        android:gravity="center_vertical"
+                        android:text="10 min"
+                        android:textColor="@color/colorMyWhite"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="#2A2F37"
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
+
+                    <ImageView
+                        android:layout_width="157dp"
+                        android:layout_height="43dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginRight="50dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/bottomarrow" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/segoe_ui"
+                        android:gravity="center_vertical"
+                        android:text="More Information"
+                        android:textColor="@color/colorMyWhite"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="56dp"
+            android:background="@color/colorMyBlack"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteY="389dp">
 
-            <ImageView
-                android:id="@+id/imageView2"
+            <Button
+                android:id="@+id/getIn"
                 android:layout_width="match_parent"
-                android:layout_height="254dp"
-                android:scaleType="center"
-                app:srcCompat="@drawable/map" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="157dp"
-                    android:layout_height="43dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginRight="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/point" />
-
-                <TextView
-                    android:id="@+id/branchFragmentAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/segoe_ui"
-                    android:gravity="center_vertical"
-                    android:text="420 Something ST"
-                    android:textColor="@color/colorMyWhite"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="157dp"
-                    android:layout_height="43dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginRight="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/distance" />
-
-                <TextView
-                    android:id="@+id/branchFragmentTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/segoe_ui"
-                    android:gravity="center_vertical"
-                    android:text="1.5 km"
-                    android:textColor="@color/colorMyWhite"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="157dp"
-                    android:layout_height="43dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginRight="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/stopwatch" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/segoe_ui"
-                    android:gravity="center_vertical"
-                    android:text="10 min"
-                    android:textColor="@color/colorMyWhite"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#2A2F37"
-                android:orientation="horizontal"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp">
-
-                <ImageView
-                    android:layout_width="157dp"
-                    android:layout_height="43dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginRight="50dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/bottomarrow" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/segoe_ui"
-                    android:gravity="center_vertical"
-                    android:text="More Information"
-                    android:textColor="@color/colorMyWhite"
-                    android:textSize="22sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorMyBlack"
-                android:orientation="vertical"
-                android:paddingBottom="20dp">
-
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="20dp"
-                    android:background="@drawable/form_getin"
-                    android:text="Get In"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorMyBlack"
-                    android:textSize="18sp" />
-            </LinearLayout>
-
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="7dp"
+                android:background="@drawable/form_getin"
+                android:text="Get In"
+                android:textAllCaps="false"
+                android:textColor="@color/colorMyBlack"
+                android:textSize="18sp" />
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
