--- a/app/src/main/res/layout/fragment_choose_branch.xml
+++ b/app/src/main/res/layout/fragment_choose_branch.xml
@@ -13,14 +13,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.mapbox.mapboxsdk.maps.MapView
-            android:id="@+id/mapChooseBranch"
+        <ImageView
+            android:id="@+id/imageView4"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            mapbox:mapbox_cameraTargetLat="40.73581"
-            mapbox:mapbox_cameraTargetLng="-73.99155"
-            mapbox:mapbox_cameraZoom="11"
-            mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v11" />
+            android:scaleType="center"
+            android:src="@drawable/map" />
 
         <LinearLayout
             android:layout_width="match_parent"
