--- a/app/src/main/res/layout/fragment_choose_branch.xml
+++ b/app/src/main/res/layout/fragment_choose_branch.xml
@@ -13,12 +13,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView4"
+        <!-- Map Fragment embedded with the map object -->
+        <fragment
+            class="com.here.android.mpa.mapping.SupportMapFragment"
+            android:id="@+id/mapfragment"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="center"
-            android:src="@drawable/map" />
+            android:layout_height="200dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
