--- a/android-app/app/src/main/res/menu/navigation.xml
+++ b/android-app/app/src/main/res/menu/navigation.xml
@@ -12,13 +12,8 @@
         android:title="@string/second_label" />
 
     <item
-        android:id="@+id/companies"
-        android:icon="@android:drawable/ic_menu_search"
-        android:title="@string/third_label" />
-
-    <item
         android:id="@+id/settings"
-        android:icon="@android:drawable/ic_menu_manage"
-        android:title="@string/forth_label" />
+        android:icon="@android:drawable/ic_dialog_info"
+        android:title="Profile" />
 
 </menu>
