--- a/android-app/app/src/main/res/values/colors.xml
+++ b/android-app/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimaryDark">#393e46</color>
     <color name="colorMyBlack">#252a34</color>
     <color name="colorMyGrey">#5f646c</color>
-    <color name="colorMyBlue">#08d9d6</color>
-    <color name="colorAccent">#ff2e63</color>
+    <color name="colorMyBlue">#08D9D6</color>
+    <color name="colorAccent">#FF2E63</color>
     <color name="colorMyWhite">#eeeeee</color>
     <color name="colorMyDarkWhite">#d1d1d1</color>
     <color name="colorMyYellow">#d9af08</color>
