--- a/android-app/app/src/main/res/layout/activity_login.xml
+++ b/android-app/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/registration_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="262dp"
                 android:layout_height="36dp"
