--- a/android-app/app/src/main/res/layout/activity_registartion.xml
+++ b/android-app/app/src/main/res/layout/activity_registartion.xml
@@ -93,40 +93,24 @@
                 android:layout_height="30dp"
                 android:orientation="horizontal"></LinearLayout>
 
-            <EditText
+            <Spinner
                 android:id="@+id/city"
                 android:layout_width="300dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@color/colorMyWhite"
-                android:hint="City"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="text"
-                android:maxLines="1"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:textColorLink="@color/colorMyBlack" />
+                android:background="@color/colorMyWhite" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:orientation="horizontal"></LinearLayout>
 
-            <EditText
+            <Spinner
                 android:id="@+id/sex"
                 android:layout_width="300dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@color/colorMyWhite"
-                android:hint="Sex"
-                android:imeActionLabel="@string/action_sign_in_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="number"
-                android:maxLines="1"
-                android:padding="3dp"
-                android:singleLine="true"
-                android:textColorLink="@color/colorMyBlack" />
+                android:background="@color/colorMyWhite" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -194,6 +178,7 @@
                 android:layout_height="36dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:background="@color/colorMyBlue"
                 android:text="Sing in"
                 android:textColor="@android:color/background_light"
