--- a/android-app/app/src/main/res/layout/fragment_branch.xml
+++ b/android-app/app/src/main/res/layout/fragment_branch.xml
@@ -20,12 +20,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView2"
+
+                <!-- Map Fragment embedded with the map object -->
+                <fragment
+                    class="com.here.android.mpa.mapping.SupportMapFragment"
+                    android:id="@+id/branchMapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="162dp"
-                    android:scaleType="center"
-                    app:srcCompat="@drawable/map" />
+                    android:layout_height="162dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -73,7 +74,7 @@
                         app:srcCompat="@drawable/distance" />
 
                     <TextView
-                        android:id="@+id/branchFragmentTime"
+                        android:id="@+id/branchFragmentDist"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -100,6 +101,7 @@
                         app:srcCompat="@drawable/stopwatch" />
 
                     <TextView
+                        android:id="@+id/branchFragmentTime"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
