--- a/android-app/app/src/main/res/menu/navigation.xml
+++ b/android-app/app/src/main/res/menu/navigation.xml
@@ -12,7 +12,7 @@
         android:title="@string/second_label" />
 
     <item
-        android:id="@+id/settings"
+        android:id="@+id/profile"
         android:icon="@android:drawable/ic_dialog_info"
         android:title="Profile" />
 
